[package]
name = "can-i-connect"
version = "0.2.1"
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Define a binary target
[[bin]]
name = "can-i-connect"
path = "src/main.rs"   # Adjust path if your binary source file is named differently

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.89"
axum = "0.7.5"
clap = { version = "4.5.16", features = ["cargo"] }
derive_more = { version = "1.0.0", features = ["from", "display"] }
env_logger = "0.11.5"
http-body-util = "0.1.2"
httpc-test = "0.1.10"
httpmock = "0.7.0"
lazy_static = "1.5.0"
log = "0.4.22"
metrics = { version = "0.24.0", default-features = false }
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }
openssl = { version = "0.10.66", features = ["vendored"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.125"
tokio = { version = "1", features = ["full"] }
